2011-05-25 Jiri Olsa <olsajiri@gmail.com>
	* adding SIGTERM/SIGINT handlers,
	  refactoring lt_run to check the latrace got killed
	* adding tests for latrace termination
	* args - replacing destination strings with void pointers

2011-05-24 Jiri Olsa <olsajiri@gmail.com>
	* args - use isprint to decide whether to print the character,
	  force test.sh to use bash,
	  enable tests for ARM architecture
	  (contributed by Dr. David Alan Gilbert <david.gilbert@linaro.org>)
	* fix test_[char|short|int|long] tests
	* test_long - separate 32/64 versions

2011-05-13 Jiri Olsa <olsajiri@gmail.com>
	* build fix for ARM
	  (contributed by Dr. David Alan Gilbert <david.gilbert@linaro.org>)
	* fixed errors discovered by cppcheck

2011-05-05 Jiri Olsa <olsajiri@gmail.com>
	* adding OUTPUT_TTY config file option
	* disabling connection between -R and -q options

2011-04-20 Jiri Olsa <olsajiri@gmail.com>
	* prevent gcc warning with single printf like arg passing
	* adding automated test support, so far for x86 and x86_64,
	  others are disabled. From this time on, I'll try to force
	  addition of automated test for each  fix/feature.. ;)

2011-04-16 Jiri Olsa <olsajiri@gmail.com>
	* fix display of char arguments
	* add threads fifo management to special directory
	  so the notification is not affected by other files

2011-04-06 Jiri Olsa <olsajiri@gmail.com>
	* fix memory leak in the argument display code

2011-04-05 Jiri Olsa <olsajiri@gmail.com>
	* fix controled config bug - missing shared config assignment
	* moving conf header files to new location + rename s/conf/h/
	* adding support for configuration file

2011-02-15 Jiri Olsa <olsajiri@gmail.com>
	* moving debian directory to the packaging
	* Sebastian Pipping <sping@gentoo.org>
	  - fix LDFLAGS/CFLAGS usage

2011-01-31 Jiri Olsa <olsajiri@gmail.com>
	* adding support for global symbol config
	  one global symbol tree to rule them all
	    - only one tree is searched during the plt entry/exit