@@ -3,6 +3,7 @@
 	  refactoring lt_run to check the latrace got killed
 	* adding tests for latrace termination
 	* args - replacing destination strings with void pointers
+	* tty output - move fd to the config struct
 
 2011-05-24 Jiri Olsa <olsajiri@gmail.com>
 	* args - use isprint to decide whether to print the character,
